--- a/LINQ Stuff/First App/LINQ/App.xaml
+++ b/LINQ Stuff/First App/LINQ/App.xaml
@@ -4,6 +4,78 @@
              xmlns:local="clr-namespace:Linq1_kk"
              StartupUri="View/MainWindow.xaml">
     <Application.Resources>
-         
+
+
+        <SolidColorBrush x:Key="BackgroundBrush"                          Color="#FF585858"/>        <SolidColorBrush x:Key="LabelForegroundColor"                          Color="White"/>
+        <SolidColorBrush x:Key="ButtonForegroundColor"                          Color="White"/>
+        <SolidColorBrush x:Key="ButtonBackgroundColor"                          Color="#FF3E3E3E"/>
+        <SolidColorBrush x:Key="TextBoxForegroundColor"                          Color="White"/>
+        <SolidColorBrush x:Key="TextBoxBackgroundColor"                          Color="#FF3E3E3E"/>
+
+        <Style x:Key="PersonInfoLabelStyle" TargetType="{x:Type Label}">
+            <Setter Property="FontSize" Value="14" />
+            <Setter Property="Foreground" Value="{StaticResource LabelForegroundColor}" />
+            <Setter Property="Height" Value="30" />
+            <Setter Property="Width" Value="90" />
+            <Setter Property="HorizontalContentAlignment" Value="Right" />
+            <Setter Property="HorizontalAlignment" Value="Right" />
+            <Setter Property="VerticalAlignment" Value="Top" />
+        </Style>
+
+        <Style x:Key="PersonInfoTextBoxStyle" TargetType="{x:Type TextBox}">
+            <Setter Property="FontSize" Value="16" />
+            <Setter Property="Height" Value="30" />
+            <Setter Property="Width" Value="201" />
+            <Setter Property="Foreground" Value="{StaticResource TextBoxForegroundColor}"/>
+            <Setter Property="Background" Value="{StaticResource TextBoxBackgroundColor}" />
+            <Setter Property="VerticalContentAlignment" Value="Center" />
+            <Setter Property="HorizontalAlignment" Value="Right" />
+            <Setter Property="VerticalAlignment" Value="Top" />
+            <Setter Property="TextWrapping" Value="Wrap" />
+        </Style>
+
+        <Style x:Key="ButtonsStyle" TargetType="{x:Type Button}">
+            <Setter Property="FontSize" Value="12" />
+            <Setter Property="Foreground" Value="{StaticResource ButtonForegroundColor}" />
+            <Setter Property="Background" Value="{StaticResource ButtonBackgroundColor}" />
+            <Setter Property="Height" Value="20" />
+            <Setter Property="Width" Value="75" />
+            <Setter Property="VerticalAlignment" Value="Top" />
+            <Setter Property="HorizontalAlignment" Value="Right" />
+        </Style>
+
+        <Style x:Key="DatePickerStyle" TargetType="{x:Type DatePicker}">
+            <Setter Property="FontSize" Value="14" />
+            <Setter Property="Height" Value="30" />
+            <Setter Property="Width" Value="201" />
+            <Setter Property="Foreground" Value="{StaticResource TextBoxForegroundColor}"/>
+            <Setter Property="Background" Value="{StaticResource TextBoxBackgroundColor}" />
+            <Setter Property="VerticalAlignment" Value="Top" />
+            <Setter Property="VerticalContentAlignment" Value="Center" />
+            <Setter Property="HorizontalAlignment" Value="Right" />
+        </Style>
+
+        <Style x:Key="StatusBarStyle" TargetType="{x:Type StatusBar}">
+            <Setter Property="Height" Value="14" />
+            <Setter Property="Width" Value="924" />
+            <Setter Property="VerticalAlignment" Value="Top" />
+            <Setter Property="HorizontalAlignment" Value="Left" />
+        </Style>
+
+        <Style x:Key="SortLabelStyle" TargetType="{x:Type Label}">
+            <Setter Property="FontSize" Value="12" />
+            <Setter Property="Width" Value="200" />
+        </Style>
+
+        <Style x:Key="ComboBoxStyle" TargetType="{x:Type ComboBox}">
+            <Setter Property="FontSize" Value="12" />
+            <Setter Property="Width" Value="222" />
+            <Setter Property="Height" Value="25" />
+            <Setter Property="SelectedIndex" Value="0" />
+            <Setter Property="VerticalAlignment" Value="Top" />
+            <Setter Property="HorizontalAlignment" Value="Left" />
+        </Style>
+
     </Application.Resources>
+    
 </Application>
