modified:   First App/LINQ/App.xaml 	modified:   First App/LINQ/View/AddView.xaml.cs 	modified:   First App/LINQ/View/MainWindowView.xaml.cs 	modified:   First App/LINQ/ViewModel/AddViewModel.cs 	modified:   First App/LINQ/ViewModel/MainWindowViewModel.cs 	modified:   Second App/Linq2_kk/App.xaml 	modified:   Second App/Linq2_kk/Linq2_kk.csproj 	deleted:    Second App/Linq2_kk/MainWindow.xaml 	renamed:    Second App/Linq2_kk/Person.cs -> Second App/Linq2_kk/Model/Person.cs 	new file:   Second App/Linq2_kk/View/AddView.xaml 	renamed:    Second App/Linq2_kk/WAdd.xaml.cs -> Second App/Linq2_kk/View/AddView.xaml.cs 	new file:   Second App/Linq2_kk/View/FormView.xaml 	renamed:    Second App/Linq2_kk/WForm.xaml.cs -> Second App/Linq2_kk/View/FormView.xaml.cs 	new file:   Second App/Linq2_kk/View/MainView.xaml 	renamed:    Second App/Linq2_kk/MainWindow.xaml.cs -> Second App/Linq2_kk/View/MainView.xaml.cs 	deleted:    Second App/Linq2_kk/WAbout.xaml 	deleted:    Second App/Linq2_kk/WAbout.xaml.cs 	deleted:    Second App/Linq2_kk/WAdd.xaml 	deleted:    Second App/Linq2_kk/WForm.xaml

--- a/LINQ Stuff/First App/LINQ/App.xaml
+++ b/LINQ Stuff/First App/LINQ/App.xaml
@@ -4,13 +4,19 @@
              xmlns:local="clr-namespace:Linq1_kk"
              StartupUri="View/MainWindow.xaml">
     <Application.Resources>
-
-
-        <SolidColorBrush x:Key="BackgroundBrush"                          Color="#FF585858"/>        <SolidColorBrush x:Key="LabelForegroundColor"                          Color="White"/>
-        <SolidColorBrush x:Key="ButtonForegroundColor"                          Color="White"/>
-        <SolidColorBrush x:Key="ButtonBackgroundColor"                          Color="#FF3E3E3E"/>
-        <SolidColorBrush x:Key="TextBoxForegroundColor"                          Color="White"/>
-        <SolidColorBrush x:Key="TextBoxBackgroundColor"                          Color="#FF3E3E3E"/>
+    
+        <SolidColorBrush x:Key="BackgroundBrush" 
+                         Color="#FF585858"/>
+        <SolidColorBrush x:Key="LabelForegroundColor" 
+                         Color="White"/>
+        <SolidColorBrush x:Key="ButtonForegroundColor" 
+                         Color="White"/>
+        <SolidColorBrush x:Key="ButtonBackgroundColor" 
+                         Color="#FF3E3E3E"/>
+        <SolidColorBrush x:Key="TextBoxForegroundColor" 
+                         Color="White"/>
+        <SolidColorBrush x:Key="TextBoxBackgroundColor" 
+                         Color="#FF3E3E3E"/>
 
         <Style x:Key="PersonInfoLabelStyle" TargetType="{x:Type Label}">
             <Setter Property="FontSize" Value="14" />
