--- a/LINQ Stuff/First App/LINQ/View/AddView.xaml
+++ b/LINQ Stuff/First App/LINQ/View/AddView.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="LINQ.AddView"
+﻿<Window x:Class="LINQ.View.AddView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:LINQ"
+        xmlns:local="clr-namespace:LINQ.View"
         mc:Ignorable="d"
         Title="Add" Height="319" Width="313"
         ResizeMode="NoResize"
