--- a/LINQ Stuff/First App/LINQ/View/MainWindowView.xaml
+++ b/LINQ Stuff/First App/LINQ/View/MainWindowView.xaml
@@ -1,20 +1,26 @@
-﻿<Window x:Class="LINQ.MainWindow"
+﻿<Window x:Class="LINQ.View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:LINQ"
+        xmlns:local="clr-namespace:LINQ.View"
         mc:Ignorable="d"
-        Title="LINQ" Height="358" Width="679"
+        Title="LINQ v1.1" Height="358" Width="679"
         ResizeMode="CanMinimize" 
         Icon="../Resources/data-512.ico"
         Background= "{StaticResource BackgroundBrush}"
         MinHeight="380" MinWidth="930">
     <Grid x:Name="mainGrid" >
-        <Menu Height="20" VerticalAlignment="Top">
+        <Menu Height="20" VerticalAlignment="Top"
+              Background="{StaticResource TextBoxBackgroundColor}"
+              Foreground="{StaticResource LabelForegroundColor}">
             <MenuItem Header="File">
-                <MenuItem x:Name="miOpen" Header="Open" Click="MiOpen_Click"/>
-                <MenuItem x:Name="miSave" Header="Save" Click="MiSave_Click"/>
+                <MenuItem x:Name="miOpen" Header="Open" Click="MiOpen_Click"
+                          Background="{DynamicResource ButtonBackgroundColor}" 
+                          BorderBrush="{DynamicResource ButtonBackgroundColor}"/>
+                <MenuItem x:Name="miSave" Header="Save" Click="MiSave_Click"
+                          Background="{DynamicResource ButtonBackgroundColor}" 
+                          BorderBrush="{DynamicResource ButtonBackgroundColor}"/>
             </MenuItem>
         </Menu>
 
@@ -72,9 +78,9 @@
                     IsEnabled="False"/>
 
         <Label Content="Sort by" Margin="10,25,0,0"
+               Height="25" Width="60"
+               Foreground="{StaticResource LabelForegroundColor}"
                FontSize="12"
-               Height="25" 
-               Width="60"
                VerticalAlignment="Top" 
                HorizontalAlignment="Left"/>
 
